Changed background to coral colour.
This is an ammendment of the style.css where the only change has been
the color of the background.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-	Theme Name: YMC Season 7 Theme
+	Theme Name: Test YMC Season 7 Theme
 	Theme URI: http://theymc.com/season_7
 	Version: 0.1
 	Author: Pablo Sosin
@@ -94,7 +94,7 @@ body
 {
     font-family: Arial;
     background: #05F2AF;
-    color: #067368;
+    color: coral;
 }
 
 header
